--- a/config/config.json
+++ b/config/config.json
@@ -1,25 +1,26 @@
 {
   "development": {
-    "username": "root",
-    "password": "5833",
-    "database": "DevMapper2",
-    "host": "127.0.0.1",
+    "username": "bbbfbeb442507e",
+    "password": "60d59f79",
+    "database": "heroku_5d109925557dbf6",
+    "host": "us-cdbr-iron-east-05.cleardb.net",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "5833",
-    "database": "DevMapper2",
-    "host": "127.0.0.1",
+    "username": "bbbfbeb442507e",
+    "password": "60d59f79",
+    "database": "heroku_5d109925557dbf6",
+    "host": "us-cdbr-iron-east-05.cleardb.net",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "5833",
-    "database": "DevMapper2",
-    "host": "127.0.0.1",
+    "username": "bbbfbeb442507e",
+    "password": "60d59f79",
+    "database": "heroku_5d109925557dbf6",
+    "host": "us-cdbr-iron-east-05.cleardb.net",
     "dialect": "mysql"
   }
 }
+
 
 
